<resources>
    <string name="app_name">Chat App</string>
    <string name="title_chat">Chat</string>
    <string name="title_profile">Profile</string>
    <string name="title_settings">Settings</string>
    <string name="no_account">No Account?? No Problem!! Tap Here :)</string>
    <string name="user_id"> User ID</string>
    <string name="user_password"> Password</string>
    <string name="btn_login">Login</string>
    <string name="btn_signup">Sign up</string>
    <string name="btn_reset_password">Reset</string>
    <string name="new_password"> New Password</string>
    <string name="btn_chng_password">Change Password</string>
    <string name="btn_rmv_account">Remove Account</string>
    <string name="btn_logout">Log Out</string>
    <string name="userName"> User Name</string>
    <string name="aboutUser"> About You</string>
    <string name="updateInfo">Update Information</string>
    <string name="forgot_password">Forgot Password???</string>
    <string name="all_users">All Users</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
