<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/user"/>

            <TextView
                android:id="@+id/txt_goToSignUp"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/no_account"
                android:textColor="@color/colorPrimary"
                android:layout_gravity="center"
               />

            <EditText
                android:id="@+id/login_id"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/user_id"
                android:drawableLeft="@drawable/userid"
                android:inputType="textWebEmailAddress"
                android:layout_marginTop="50dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                />
            <EditText
                android:id="@+id/login_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/user_password"
                android:maxLength="8"
                android:drawableLeft="@drawable/password"
                android:inputType="numberPassword"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="50dp"
                />

            <TextView
                android:id="@+id/forgotPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="50dp"
                android:text="@string/forgot_password"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:textColor="@color/colorPrimary"
                android:textSize="15dp"/>

            <Button
                android:id="@+id/login_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/btn_login"
                android:layout_marginBottom="10dp"
                android:textColor="@color/colorPrimary"
                android:textAllCaps="false"
                android:background="@drawable/custom_btn"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                />


        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>