<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:background="@drawable/user"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="50dp"/>

            <EditText
                android:id="@+id/user_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:drawableLeft="@drawable/username"
                android:inputType="textPersonName"
                android:hint="@string/userName"
                />

            <EditText
                android:id="@+id/signUp_id"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="50dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:drawableLeft="@drawable/userid"
                android:hint="@string/user_id"
                android:inputType="textWebEmailAddress"/>

            <EditText
                android:id="@+id/signUp_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="50dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:drawableLeft="@drawable/password"
                android:hint="@string/user_password"
                android:inputType="numberPassword"
                android:maxLength="8" />

            <Button
                android:id="@+id/signUp_btn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textAllCaps="false"
                android:text="@string/btn_signup"
                android:textColor="@color/colorPrimary"
                android:background="@drawable/custom_btn"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"/>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>