<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="50dp"
                android:background="@drawable/usersetting"/>

            <EditText
                android:id="@+id/chng_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/new_password"
                android:drawableLeft="@drawable/password"
                android:inputType="numberPassword"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"/>

            <Button
                android:id="@+id/btn_mainChngPassword"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@drawable/custom_btn"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/btn_chng_password"
                android:textAllCaps="false"
                android:textColor="@color/colorPrimary"
                />

            <Button
                android:id="@+id/btn_chng_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/custom_btn"
                android:text="@string/btn_chng_password"
                android:textColor="@color/colorPrimary"
                android:textAllCaps="false"/>

            <Button
                android:id="@+id/btn_rmv_account"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/custom_btn"
                android:textAllCaps="false"
                android:textColor="@color/colorPrimary"
                android:text="@string/btn_rmv_account"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                />
            
            <Button
                android:id="@+id/btn_logout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/custom_btn"
                android:text="@string/btn_logout"
                android:textColor="@color/colorPrimary"
                android:textAllCaps="false"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                />

        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>