<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileFragment"
    android:id="@+id/fragment_profile">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/user_profilePic"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="50dp"
                android:background="@drawable/user"/>

            <EditText
                android:id="@+id/userName"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:drawableLeft="@drawable/username"
                android:hint="@string/userName"
                android:inputType="textPersonName"
                android:maxLength="15"
                />

            <EditText
                android:id="@+id/aboutYou"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="20dp"
                android:hint="@string/aboutUser"
                android:inputType="text"
                android:drawableLeft="@drawable/aboutuser"
                android:maxLines="4"
                />

            <Button
                android:id="@+id/btn_updtInfo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/custom_btn"
                android:textAllCaps="false"
                android:text="@string/updateInfo"
                android:textColor="@color/colorPrimary"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"/>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>